--- a/.github/workflows/deer-build.yml
+++ b/.github/workflows/deer-build.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 jobs:
   build-android:
     name: Build Deer For Android
-    runs-on: high-end
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
