--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-android:
     name: Build Deer For Android
-    runs-on: high-end
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,8 +19,7 @@ jobs:
         with:
           java-version: 17
           distribution: temurin
-          cache: gradle
-          
+          cache: gradle  
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
       - name: Setup Just
@@ -43,7 +42,7 @@ jobs:
   release: 
     name: Create GitHub Release
     needs: build-android
-    runs-on: high-end
+    runs-on: ubuntu-latest
     permissions:
       contents: write
       discussions: write
@@ -108,27 +107,34 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   deploy-to-cloudflare:
-    name: Deploy To Cloudflare
-    runs-on: low-end
+    name: Deploy to Cloudflare Pages
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ env.NODE_VERSION }}
+          cache: yarn
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
+
       - name: Update browserslist database
         run: npx update-browserslist-db@latest
+
       - name: Build Web App
         run: yarn build-web
+
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
         with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: 'deer-social'
           directory: 'web-build'
-          branch: 'main'
-          wranglerVersion: '3'
