--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "email-validator": "^2.0.4",
     "emoji-regex": "^10.4.0",
     "eventemitter3": "^5.0.1",
-    "expo": "^54.0.9",
+    "expo": "^54.0.13",
     "expo-application": "~7.0.7",
     "expo-blur": "~15.0.7",
     "expo-build-properties": "~1.0.9",
@@ -176,13 +176,13 @@
     "postinstall-postinstall": "^2.1.0",
     "psl": "^1.9.0",
     "radix-ui": "^1.4.3",
-    "react": "19.1.0",
+    "react": "19.2.0",
     "react-compiler-runtime": "^19.1.0-rc.1",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.0",
     "react-image-crop": "^11.0.7",
     "react-is": "19",
     "react-keyed-flatten-children": "^5.0.0",
-    "react-native": "0.81.4",
+    "react-native": "0.82.0",
     "react-native-compressor": "^1.13.0",
     "react-native-date-picker": "^5.0.13",
     "react-native-device-attest": "^0.1.6",
@@ -210,6 +210,7 @@
     "react-remove-scroll-bar": "^2.3.8",
     "react-responsive": "^10.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "sentry-expo": "^7.2.0",
     "sonner": "^2.0.7",
     "sonner-native": "^0.21.0",
     "statsig-react-native-expo": "^4.6.1",
@@ -240,17 +241,18 @@
     "@types/psl": "^1.1.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "babel-jest": "^29.7.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "babel-preset-expo": "~54.0.0",
-    "eslint": "^8.19.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-bsky-internal": "link:./eslint",
     "eslint-plugin-ft-flow": "^2.0.3",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-lingui": "^0.2.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
@@ -259,8 +261,8 @@
     "file-loader": "6.2.0",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "jest": "^29.7.0",
-    "jest-expo": "~54.0.12",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.12",
     "jest-junit": "^16.0.0",
     "lint-staged": "^13.2.3",
     "lockfile-lint": "^4.14.0",
@@ -268,9 +270,10 @@
     "prettier": "^3.6.0",
     "react-native-dotenv": "^3.4.11",
     "react-refresh": "^0.14.0",
+    "react-test-renderer": "19.2.0",
     "svgo": "^3.3.2",
     "ts-node": "^10.9.1",
-    "typescript": "^5.9.2",
+    "typescript": "^5.9.3",
     "webpack-bundle-analyzer": "^4.10.1"
   },
   "resolutions": {
@@ -280,13 +283,26 @@
     "**/expo-constants": "18.0.8",
     "**/expo-device": "7.1.4",
     "**/zod": "3.23.8",
-    "**/multiformats": "9.9.0"
+    "**/multiformats": "9.9.0",
+    "@atproto/api": "0.14.21",
+    "expo-modules-core": "3.0.17",
+    "expo-notifications": "0.32.11",
+    "expo-updates": "29.0.11",
+    "react-native-drawer-layout": "4.1.10"
   },
   "jest": {
     "preset": "jest-expo/ios",
     "setupFilesAfterEnv": [
       "./jest/jestSetup.js"
     ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|@discord|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|nanoid|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|normalize-url|react-native-svg|bcp-47-match|expo.*)"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^expo$": "expo/build/Expo.js",
+      "^#/(.*)$": "<rootDir>/src/$1"
+    },
     "moduleFileExtensions": [
       "ts",
       "tsx",
@@ -298,9 +314,6 @@
     "transform": {
       "\\.[jt]sx?$": "babel-jest"
     },
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|@discord|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|nanoid|@react-navigation/.*|@unimodules/.*|unimodules|native-base|normalize-url|react-native-svg|bcp-47-match)"
-    ],
     "modulePathIgnorePatterns": [
       "__tests__/.*/__mocks__",
       "__e2e__/.*"
