--- a/.github/workflows/deer-build.yml
+++ b/.github/workflows/deer-build.yml
@@ -47,12 +47,12 @@ jobs:
             # A more robust approach might be needed if the structure varies significantly.
             
             # First, try to insert after mavenCentral()
-            sed -i.bak '/allprojects {/,/repositories {/b; /repositories {/!b; /mavenCentral()/a\'"$REPO_SNIPPET $BUILD_GRADLE_FILE
+            sed -i.bak "/allprojects {/,/repositories {/b; /repositories {/!b; /mavenCentral()/a\\$REPO_SNIPPET" "$BUILD_GRADLE_FILE"
             INSERT_STATUS=$?
 
             # If inserting after mavenCentral() failed, try inserting after google()
             if [ $INSERT_STATUS -ne 0 ]; then
-                sed -i.bak '/allprojects {/,/repositories {/b; /repositories {/!b; /google()/a\'"$REPO_SNIPPET $BUILD_GRADLE_FILE
+                sed -i.bak "/allprojects {/,/repositories {/b; /repositories {/!b; /google()/a\\$REPO_SNIPPET" "$BUILD_GRADLE_FILE"
                 INSERT_STATUS=$?
             fi
 
@@ -62,7 +62,7 @@ jobs:
                 if grep -A 20 'allprojects {' "$BUILD_GRADLE_FILE" | grep -q 'repositories {'; then
                     echo "Found repositories block. Attempting to add repository at the end of the block..."
                     # Find the closing '}' of the repositories block within allprojects and insert before it
-                    sed -i.bak '/allprojects {/,/repositories {/{ /repositories {/!b; }; /allprojects {/,/}/!b; /}/i\'"$REPO_SNIPPET $BUILD_GRADLE_FILE
+                    sed -i.bak "/allprojects {/,/repositories {/{ /repositories {/!b; }; /allprojects {/,/}/!b; /}/i\\$REPO_SNIPPET" "$BUILD_GRADLE_FILE"
                 else
                     echo "Error: Could not find the 'repositories' block within 'allprojects' in $BUILD_GRADLE_FILE."
                     echo "Please check the structure manually."
@@ -76,7 +76,7 @@ jobs:
           # Optional: Print the modified file for debugging (remove or comment out for production)
           # echo "--- Content of $BUILD_GRADLE_FILE after modification ---"
           # cat "$BUILD_GRADLE_FILE"
-          # echo "--- End of $BUILD_GRADLE_FILE ---
+          # echo "--- End of $BUILD_GRADLE_FILE ---"
       - name: Build APK
         run: just dist-build-android-gradle
       - name: Upload APK artifact
