--- a/.github/workflows/deer-release.yml
+++ b/.github/workflows/deer-release.yml
@@ -156,35 +156,35 @@ jobs:
             This release is signed and verified. The APK is built in un entorno limpio y reproducible.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  deploy-to-cloudflare:
-    name: Deploy to Cloudflare Pages
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      deployments: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # deploy-to-cloudflare:
+  #   name: Deploy to Cloudflare Pages
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     deployments: write
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-          cache: yarn
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+  #         cache: yarn
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+  #     - name: Install dependencies
+  #       run: yarn install --frozen-lockfile
 
-      - name: Update browserslist database
-        run: npx update-browserslist-db@latest
+  #     - name: Update browserslist database
+  #       run: npx update-browserslist-db@latest
 
-      - name: Build Web App
-        run: yarn build-web
+  #     - name: Build Web App
+  #       run: yarn build-web
 
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: 'deer-social'
-          directory: 'web-build'
+  #     - name: Publish to Cloudflare Pages
+  #       uses: cloudflare/pages-action@v1
+  #       with:
+  #         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+  #         accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+  #         projectName: 'deer-social'
+  #         directory: 'web-build'
