--- a/wrangler.toml
+++ b/wrangler.toml
@@ -15,5 +15,8 @@ EXPO_PUBLIC_ENV = "production"
 ENVIRONMENT = "preview"
 EXPO_PUBLIC_ENV = "preview"
 
+[build]
+command = "yarn build-web"
+
 [build.environment]
 NODE_VERSION = "20.19.4"
