--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ compatibility_flags = ["nodejs_compat"]
 [vars]
 ENVIRONMENT = "production"
 EXPO_PUBLIC_ENV = "production"
-NODE_VERSION = "20.19.4"
+NODE_VERSION = ">=22"
 
 [env.production.vars]
 ENVIRONMENT = "production"
