--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "v4.3.11",
   "private": true,
   "engines": {
-    "node": ">=22"
+    "node": "22.17.0"
   },
   "packageManager": "yarn@1.22.22",
   "expo": {
