--- a/.gitignore
+++ b/.gitignore
@@ -110,7 +110,7 @@ google-services.json
 
 # i18n
 src/locale/locales/_build/
-src/locale/locales/**/*.js
+# src/locale/locales/**/*.js
 
 # local builds
 *.apk
